# pyinstaller_setup

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: test_import.py
